
Version Next

    - Added SpringXSLUpdateTransformConfigurer

Version 1.0.227 Released Jan 18, 2012

    - Added new PersistentObject classes in org.dellroad.stuff.pobj
    - Remove unnecessary methods openConnection() and closeConnection()
      from AbstractSchemaUpdater and subclasses
    - Only require ListableBeanFactory in SpringSQLSchemaUpdater when
      schema updates are not specified explicitly
    - Apply some minimal validation to schema update names
    - Added AnnotatedXMLEvent{Reader, Writer}, TransformErrorListener
    - Added new "jibx-bind" build macro

Version 1.0.207 Released Jan 10, 2012

    - Refactored schema package to make schema tracking not be SQL-specific
    - Added SocketAcceptor, ValidationContext, ExceptionLoggingFilter
    - Added ParseUtil.deserializeBooleanStrictly()
    - Releases are now published in Maven

Version 1.0.189 Released Dec 16, 2011

    - Removed obsolete WebContextApplicationServlet
    - Added @VaadinConfigurable and re-targeted VaadinConfigurableAspect to
      apply to @VaadinConfigurable beans instead of @Configurable beans; this
      avoids a conflict when doing load-time weaving when spring-aspects.jar
      is also on the classpath. NOTE: backward-incompatible change.

Version 1.0.173 Released Oct 28, 2011

    - Added aspect for wiring @Configurable beans for SpringContextApplication
    - Fixed bugs in SpringContextApplication

Version 1.0.155 Released Oct 21, 2011

    - Added SpringContextApplication
    - Added OutputStreamWriter and InputStreamReader
    - Added XMLDocument{Input,Output}Stream
    - Added AbstractValidator and @Sorted validation constraint
    - Fix bug where JiBXUtil.writeObject() was closing the output stream
    - Refactored jibx sub-package to isolate Spring dependencies

Version 1.0.140 Released Oct 12, 2011

    - Added PropertyDef
    - Added VaadinApplicationScope
    - Added VaadinApplicationListener
    - Added CloseListener interface to ContextApplication
